[gd_scene load_steps=8 format=2]

[ext_resource path="res://fonts/Kenney Future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/ui/PlayerNameInput.gd" type="Script" id=2]
[ext_resource path="res://audio/sfx/ui/interface-124464.mp3" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="NamePopupDialog" type="PopupDialog"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -317.0
margin_top = -191.0
margin_right = 318.0
margin_bottom = 99.0
popup_exclusive = true
script = ExtResource( 2 )

[node name="TitleLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "New High Score!"
align = 1
valign = 1

[node name="NameLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -186.5
margin_top = -55.0
margin_right = 186.5
margin_bottom = -25.0
custom_fonts/font = SubResource( 2 )
text = "Please Enter Your Name"
align = 1
valign = 1

[node name="NameTextEdit" type="TextEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -188.5
margin_top = 4.0
margin_right = 188.5
margin_bottom = 38.0
custom_fonts/font = SubResource( 3 )
caret_blink = true

[node name="QuitButton" type="Button" parent="."]
margin_left = 175.0
margin_top = 226.0
margin_right = 265.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 4 )
text = "Quit"

[node name="CancelButton" type="Button" parent="."]
margin_left = 279.0
margin_top = 226.0
margin_right = 369.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 4 )
text = "Cancel"

[node name="OkButton" type="Button" parent="."]
margin_left = 384.0
margin_top = 226.0
margin_right = 470.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 4 )
text = "Submit"

[node name="UIAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="OkButton" to="." method="_on_OkButton_pressed"]
